src/objects/ClearTrain_User__c.object
<CustomObject>
    <description>A list of the people being trained via ClearTrain</description>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>ClearTrain Users</relationshipLabel>
        <relationshipName>ClearTrain_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard User</fullName>
                </value>
                <value>
                    <fullName>Admin User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ClearTrain User</label>
    <nameField>
        <displayFormat>CTN-{0000}</displayFormat>
        <label>ClearTrain User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClearTrain Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>